@@ -1,3 +1,9 @@
+2007-02-01  Kai Blin  <kai.blin@gmail.com>
+	* plugins/info.py, dom.py: output information about faces.
+	* plugins/sear.py: fix a typo
+	* collada_plugin/generator.py: Remove pretty-printing for prims, as it produced
+	  misleading output.
+
 2007-01-31  Kai Blin  <kai.blin@gmail.com>
 	* plugins/info.py, collada_plugin/parser.py, dom.py: Output more
 	  information.
